# Hamonix-SoundEditor

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  main.py  package-lock.json  pyproject.toml  setup.py  setup.spec
.github/: RELEASE.md  WORKFLOW_IMPROVEMENTS.md
.github/workflows/: release.yml  release_v2.yml
app/: __init__.py  application.py  converter.py  ui_main.py
app/resources/: styles.qss
backend/: README.md  main.py  utils.py
backend/app/config/: __init__.py  constants.py  settings.py
backend/app/exceptions/: __init__.py  base.py  file_errors.py  processing_errors.py  validation_errors.py
backend/app/formatters/: __init__.py  output_formatter.py  path_formatter.py
backend/app/handler/: converter.py  modifier.py
backend/app/utils/: __init__.py  audio_utils.py  file_utils.py  string_utils.py
backend/app/validators/: __init__.py  audio_validator.py  format_validator.py  parameter_validator.py
backend/tests/: conftest.py  test_converter.py  test_formatters.py  test_mastering.py  test_modifier.py  test_trimmer.py  test_utils.py  test_validators.py
docs/: IPC_IMPLEMENTATION.md
examples/: basic_conversion.py  batch_processing.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css
frontend/src/components/: DragDropArea.jsx  (+10 more)
scripts/: download-binaries.sh
src-tauri/: Cargo.toml  package-lock.json  package.json  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: logging.rs  mod.rs  python.rs
(+9 files in other folders)
