[package]
name = "harmonix-se"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["path-all", "dialog-all", "fs-all", "shell-execute", "shell-sidecar"] }
chrono = { version = "0.4", features = ["clock"] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


[build-dependencies]
tauri-build = { version = "1", features = [] }
